- Fixed radio button error message overlaps

--- a/src/main/public/css/bootstrap.css
+++ b/src/main/public/css/bootstrap.css
@@ -5402,6 +5402,10 @@ input[type="submit"].btn.btn-mini {
   margin-top: -10px;
 }
 
+label .popover.right {
+  margin-left: 100px;
+}
+
 .popover.right {
   margin-left: 10px;
 }
